--- a/01-html-css/index.html
+++ b/01-html-css/index.html
@@ -19,26 +19,26 @@
           autofocus=""
         />
       </header>
-      <div class="">
-        <ul>
+      <section>
+        <ul class="todo-list">
           <li>
             <input class="toggle" type="checkbox" />
-            <label>test</label>
+            <label>First ToDo</label>
           </li>
           <li>
             <input class="toggle" type="checkbox" />
-            <label>test</label>
+            <label>Second ToDo</label>
           </li>
           <li>
             <input class="toggle" type="checkbox" checked />
-            <label>test</label>
+            <label>Third ToDo</label>
           </li>
           <li>
             <input class="toggle" type="checkbox" checked />
-            <label>test</label>
+            <label>Last ToDo</label>
           </li>
         </ul>
-      </div>
+      </section>
       <footer>
         <p>You have 2 open ToDos, and you have completed 2 ToDos</p>
       </footer>
